# vibetune

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
autotune/: __init__.py  __main__.py  app.py  brain.py  config.py  midi_gen.py  player.py  preflight.py
vibetune/: __init__.py  __main__.py  app.py  config.py  editor.py  preflight.py  presets.py
