[project]
name = "vibetune"
version = "0.1.1"
description = "Local-LLM-driven terminal based music generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["music", "midi", "llm", "ollama", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "ollama>=0.4.5",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "pretty_midi>=0.2.10",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "pygame>=2.5.0",
]

[project.urls]
Repository = "https://github.com/suckstobeanik/vibetune"

[project.scripts]
vibetune = "vibetune.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
